tests/paczka1/small_fuzzy/98291595.err
Error in line 3: S158 S160 81,3
Error in line 8: Pje6hDdjWIN A37 88,9
